--- a/.github/workflows/PRmetatest.yml
+++ b/.github/workflows/PRmetatest.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           mode: minimum
           count: 1
-          labels: 'role:api-engineer, role:business-analyst, role:data-engineer, role:designer, role:developer-operations, role:project-manager, role:project-owner, role:service-engineer, role:tester, role:ui-engineer'
+          labels: 'role:api-engineer, role:data-engineer, role:designer, role:developer-operations, role:project-owner, role:service-engineer, role:ui-engineer'
       
       - name: Has atleast one scope label
         uses: mheap/github-action-required-labels@v1
