--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,9 +33,14 @@
       "@training-buddy/api/example/service/shared/interfaces/data-access": [
         "libs/api/example/service/shared/interfaces/data-access/src/index.ts"
       ],
-      "@training-buddy/api/shell/feature": ["libs/api/shell/feature/src/index.ts"],
+      "@training-buddy/api/shell/feature": [
+        "libs/api/shell/feature/src/index.ts"
+      ],
       "@training-buddy/client/example/feature": [
         "libs/client/example/feature/src/index.ts"
+      ],
+      "@training-buddy/client/login/feature": [
+        "libs/client/login/feature/src/index.ts"
       ],
       "@training-buddy/client/shared/components/navbar/ui": [
         "libs/client/shared/components/navbar/ui/src/index.ts"
@@ -51,6 +56,9 @@
       ],
       "@training-buddy/client/shell/feature": [
         "libs/client/shell/feature/src/index.ts"
+      ],
+      "@training-buddy/client/signup/feature": [
+        "libs/client/signup/feature/src/index.ts"
       ]
     }
   },
