👽️ (API): Added Structure and EVN Config

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/service-worker": "~13.2.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.11",
     "@nestjs/platform-express": "^8.0.0",
     "@ngxs-labs/actions-executing": "^0.1.9",
     "@ngxs/cli": "^2.0.0",
@@ -42,6 +43,10 @@
     "@ngxs/storage-plugin": "^3.7.3",
     "@ngxs/store": "^3.7.3",
     "@prisma/client": "3.10.0",
+    "firebase": "^9.7.0",
+    "firebase-tools": "^10.8.0",
+    "global": "^4.4.0",
+    "graphql": "^16.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
@@ -62,6 +67,7 @@
     "@nrwl/cypress": "13.8.3",
     "@nrwl/eslint-plugin-nx": "13.8.3",
     "@nrwl/jest": "13.8.3",
+    "@nrwl/js": "13.8.3",
     "@nrwl/linter": "13.8.3",
     "@nrwl/nest": "^13.8.3",
     "@nrwl/node": "13.8.3",
