--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,6 +33,18 @@
       "@training-buddy/api/example/service/shared/interfaces/data-access": [
         "libs/api/example/service/shared/interfaces/data-access/src/index.ts"
       ],
+      "@training-buddy/api/internal-api/api/shared/interfaces/data-access": [
+        "libs/api/internal-api/api/shared/interfaces/data-access/src/index.ts"
+      ],
+      "@training-buddy/api/internal-api/api/training-buddy-api": [
+        "libs/api/internal-api/api/training-buddy-api/src/index.ts"
+      ],
+      "@training-buddy/api/internal-api/service/shared/interfaces/data-access": [
+        "libs/api/internal-api/service/shared/interfaces/data-access/src/index.ts"
+      ],
+      "@training-buddy/api/internal-api/service/training-buddy-service": [
+        "libs/api/internal-api/service/training-buddy-service/src/index.ts"
+      ],
       "@training-buddy/api/shell/feature": [
         "libs/api/shell/feature/src/index.ts"
       ],
