--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.0.0 || ^14.0.0-0",
-    "@angular/cdk": "^13.2.3",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
+    "@angular/animations": "^13.3.6",
+    "@angular/cdk": "^13.3.6",
+    "@angular/common": "~13.3.6",
+    "@angular/compiler": "~13.3.6",
+    "@angular/core": "~13.3.6",
     "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "^13.0.0 || ^14.0.0-0",
-    "@angular/material": "^13.2.3",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/pwa": "^13.2.4",
-    "@angular/router": "~13.2.0",
-    "@angular/service-worker": "~13.2.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@angular/forms": "^13.3.6",
+    "@angular/material": "^13.3.6",
+    "@angular/platform-browser": "~13.3.6",
+    "@angular/platform-browser-dynamic": "~13.3.6",
+    "@angular/pwa": "^13.3.5",
+    "@angular/router": "~13.3.6",
+    "@angular/service-worker": "~13.3.6",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/platform-express": "^8.4.4",
     "@ngxs-labs/actions-executing": "^0.1.9",
     "@ngxs/cli": "^2.0.0",
     "@ngxs/devtools-plugin": "^3.7.3",
@@ -41,50 +41,50 @@
     "@ngxs/schematics": "^0.0.1-alpha.5",
     "@ngxs/storage-plugin": "^3.7.3",
     "@ngxs/store": "^3.7.3",
-    "@prisma/client": "3.10.0",
+    "@prisma/client": "3.13.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.5.5",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.2.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@nrwl/angular": "^13.8.3",
-    "@nrwl/cli": "13.8.3",
-    "@nrwl/cypress": "13.8.3",
-    "@nrwl/eslint-plugin-nx": "13.8.3",
-    "@nrwl/jest": "13.8.3",
-    "@nrwl/linter": "13.8.3",
-    "@nrwl/nest": "^13.8.3",
-    "@nrwl/node": "13.8.3",
+    "@angular-devkit/build-angular": "~13.3.5",
+    "@angular-eslint/eslint-plugin": "~13.2.1",
+    "@angular-eslint/eslint-plugin-template": "~13.2.1",
+    "@angular-eslint/template-parser": "~13.2.1",
+    "@angular/cli": "~13.3.5",
+    "@angular/compiler-cli": "~13.3.6",
+    "@angular/language-service": "~13.3.6",
+    "@nestjs/schematics": "^8.0.11",
+    "@nestjs/testing": "^8.4.4",
+    "@nrwl/angular": "^14.1.4",
+    "@nrwl/cli": "14.1.4",
+    "@nrwl/cypress": "14.1.4",
+    "@nrwl/eslint-plugin-nx": "14.1.4",
+    "@nrwl/jest": "14.1.4",
+    "@nrwl/linter": "14.1.4",
+    "@nrwl/nest": "^14.1.4",
+    "@nrwl/node": "14.1.4",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/storybook": "^13.8.3",
-    "@nrwl/tao": "13.8.3",
-    "@nrwl/workspace": "13.8.3",
-    "@types/jest": "27.0.2",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.10.0",
-    "@typescript-eslint/parser": "~5.10.0",
-    "autoprefixer": "^10.4.0",
-    "cypress": "^9.1.0",
-    "eslint": "~8.7.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.2.3",
-    "jest-preset-angular": "11.1.1",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "prisma": "^3.10.0",
-    "tailwindcss": "^3.0.2",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.5.2"
+    "@nrwl/storybook": "^14.1.4",
+    "@nrwl/tao": "14.1.4",
+    "@nrwl/workspace": "14.1.4",
+    "@types/jest": "27.5.0",
+    "@types/node": "17.0.31",
+    "@typescript-eslint/eslint-plugin": "~5.22.0",
+    "@typescript-eslint/parser": "~5.22.0",
+    "autoprefixer": "^10.4.7",
+    "cypress": "^9.6.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "jest": "28.1.0",
+    "jest-preset-angular": "11.1.2",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "prisma": "^3.13.0",
+    "tailwindcss": "^3.0.24",
+    "ts-jest": "28.0.1",
+    "typescript": "~4.6.4"
   }
 }
