--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@angular/pwa": "^13.2.4",
     "@angular/router": "~13.2.0",
     "@angular/service-worker": "~13.2.0",
+    "@nestjs/apollo": "^10.0.11",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.11",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@ngxs-labs/actions-executing": "^0.1.9",
     "@ngxs/cli": "^2.0.0",
@@ -43,10 +45,15 @@
     "@ngxs/storage-plugin": "^3.7.3",
     "@ngxs/store": "^3.7.3",
     "@prisma/client": "3.10.0",
+    "@types/passport-local": "^1.0.34",
+    "apollo": "^2.33.11",
+    "apollo-server": "^3.7.0",
     "firebase": "^9.7.0",
     "firebase-tools": "^10.8.0",
     "global": "^4.4.0",
     "graphql": "^16.4.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
