:lipstick: Rough final signup and login forms with google auto complete and geo-coding

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -71,6 +71,9 @@
       ],
       "@training-buddy/client/signup/feature": [
         "libs/client/signup/feature/src/index.ts"
+      ],
+      "@training-buddy/shared/services/authentication/data-access/src/lib/image-generator": [
+        "libs/client/shared/services/authentication/data-access/src/lib/image-generator.service"
       ]
     }
   },
