--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -51,6 +51,9 @@
       "@training-buddy/api/internal-api/service/training-buddy-service": [
         "libs/api/internal-api/service/training-buddy-service/src/index.ts"
       ],
+      "@training-buddy/api/shared/services/prisma//data-access": [
+        "libs/api/shared/services/prisma/data-access/src/index.ts"
+      ],
       "@training-buddy/api/shell/feature": [
         "libs/api/shell/feature/src/index.ts"
       ],
