--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@nestjs/graphql": "^10.0.11",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.4.4",
     "@ngxs-labs/actions-executing": "^0.1.9",
     "@ngxs/cli": "^2.0.0",
     "@ngxs/devtools-plugin": "^3.7.3",
@@ -49,14 +49,17 @@
     "@ngxs/storage-plugin": "^3.7.3",
     "@ngxs/store": "^3.7.3",
     "@prisma/client": "3.10.0",
-    "@types/passport-jwt": "^3.0.6",
     "@types/googlemaps": "^3.43.3",
-    "file-system": "^2.2.2",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "apollo": "^2.33.11",
     "apollo-server": "^3.7.0",
     "bcrypt": "^5.0.1",
+    "express": "^4.18.1",
+    "file-system": "^2.2.2",
     "firebase": "^9.7.0",
+    "firebase-admin": "^10.2.0",
+    "firebase-functions": "^3.21.0",
     "firebase-tools": "^10.8.0",
     "global": "^4.4.0",
     "graphql": "^16.4.0",
