--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prisma:migrate:dev": "yarn prisma migrate dev",
     "build": "nx build",
     "test": "nx test",
+    "lint" : "nx lint",
+    "reset": "nx reset",
     "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
