--- a/.github/workflows/PRmetatest.yml
+++ b/.github/workflows/PRmetatest.yml
@@ -2,6 +2,7 @@ name: 'Meta Test'
 
 on: 
   pull_request:
+    branches: [ develop]
     types: [ opened, reopened, labeled ]
 
 jobs:
@@ -25,7 +26,7 @@ jobs:
         with:
           mode: minimum
           count: 1
-          labels: 'type:bug, type:change, type:documentation, type:enhance, type:fix, type:refactor, type:test'
+          labels: 'type:bug, type:new, type:change, type:documentation, type:enhance, type:fix, type:refactor, type:test'
 
       - name: Has atleast one status label
         uses: mheap/github-action-required-labels@v1
