--- a/.github/workflows/PRmetatest.yml
+++ b/.github/workflows/PRmetatest.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           mode: minimum
           count: 1
-          labels: 'scope:api,scope:cicd,scope:client,scope:db,scope:design,scope:ui,scope:repository'
+          labels: 'scope:api,scope:cicd,scope:client,scope:db,scope:design,scope:ui,scope:repository,scope:documentation'
 
   milestone-check:
     name: Checks if milestone is used
