--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://training-buddy:training-buddy@localhost:5432/mydb?schema=public"
-API_KEY: "AIzaSyD_61N0OLPsfAKHoawzDtIExK_BU3GR6hM",
-AUTH_DOMAIN: "training-buddy-2022.firebaseapp.com",
-PROJECT_ID: "training-buddy-2022",
-STORAGE_BUCKET: "training-buddy-2022.appspot.com",
-MSG_SENDER_ID: "445917436",
-APP_ID: "1:445917436:web:a79e84196f2d8e48100f79",
+API_KEY: "AIzaSyD_61N0OLPsfAKHoawzDtIExK_BU3GR6hM"
+AUTH_DOMAIN: "training-buddy-2022.firebaseapp.com"
+PROJECT_ID: "training-buddy-2022"
+STORAGE_BUCKET: "training-buddy-2022.appspot.com"
+MSG_SENDER_ID: "445917436"
+APP_ID: "1:445917436:web:a79e84196f2d8e48100f79"
 MEASUREMENT_ID: "G-K7WPZTL3FJ"
