:art: :fire: Adding Dashboard and routing to top level app

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -57,6 +57,9 @@
       "@training-buddy/api/shell/feature": [
         "libs/api/shell/feature/src/index.ts"
       ],
+      "@training-buddy/client/dashboard/feature": [
+        "libs/client/dashboard/feature/src/index.ts"
+      ],
       "@training-buddy/client/example/feature": [
         "libs/client/example/feature/src/index.ts"
       ],
