--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -66,6 +66,12 @@
       "@training-buddy/client/login/feature": [
         "libs/client/login/feature/src/index.ts"
       ],
+      "@training-buddy/client/profile/feature": [
+        "libs/client/profile/feature/src/index.ts"
+      ],
+      "@training-buddy/client/settings/feature": [
+        "libs/client/settings/feature/src/index.ts"
+      ],
       "@training-buddy/client/shared/components/navbar/ui": [
         "libs/client/shared/components/navbar/ui/src/index.ts"
       ],
