--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB (Preview) and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://training-buddy:training-buddy@localhost:5432/training-buddy?schema=public"
+DATABASE_URL="postgresql://postgres:mydogRubi@localhost:5432/postgres?schema=TrainingBuddy"
 API_KEY: "AIzaSyD_61N0OLPsfAKHoawzDtIExK_BU3GR6hM"
 AUTH_DOMAIN: "training-buddy-2022.firebaseapp.com"
 PROJECT_ID: "training-buddy-2022"
