--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/pwa": "^13.2.4",
-    "@angular/router": "~13.2.0",
+    "@angular/router": "^13.3.7",
     "@angular/service-worker": "~13.2.0",
     "@apollo/client": "^3.6.2",
     "@nestjs/apollo": "^10.0.11",
