--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     container_name: postgres
     env_file: .env
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: mydogRubi
-      POSTGRES_DB: postgres
+      POSTGRES_USER: training-buddy
+      POSTGRES_PASSWORD: training-buddy
+      POSTGRES_DB: training-buddy
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - postgres-data:/var/lib/postgresql/data/pgdata
