✨ (API) User Config Endpoint

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ DATABASE_URL="postgresql://training-buddy:training-buddy@localhost:5432/training
 API_KEY: "AIzaSyD_61N0OLPsfAKHoawzDtIExK_BU3GR6hM"
 AUTH_DOMAIN: "training-buddy-2022.firebaseapp.com"
 PROJECT_ID: "training-buddy-2022"
+DATABASE_URL: "https://training-buddy-2022-default-rtdb.firebaseio.com"
 STORAGE_BUCKET: "training-buddy-2022.appspot.com"
 MSG_SENDER_ID: "445917436"
 APP_ID: "1:445917436:web:a79e84196f2d8e48100f79"
