--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -93,6 +93,9 @@
       "@training-buddy/client/signup/feature": [
         "libs/client/signup/feature/src/index.ts"
       ],
+      "@training-buddy/client/strava/feature": [
+        "libs/client/strava/feature/src/index.ts"
+      ],
       "@training-buddy/shared/services/authentication/data-access/src/lib/image-generator": [
         "libs/client/shared/services/authentication/data-access/src/lib/image-generator.service"
       ]
