--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
+    "start": "nx serve --port 80",
     "start:client": "yarn start client",
     "start:api": "yarn start api",
     "start:db": "docker compose up -d",
