--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 API_KEY: "AIzaSyD_61N0OLPsfAKHoawzDtIExK_BU3GR6hM"
 AUTH_DOMAIN: "training-buddy-2022.firebaseapp.com"
 PROJECT_ID: "training-buddy-2022"
-DATABASE_URL: "https://training-buddy-2022-default-rtdb.firebaseio.com"
+FIREBASE_DATABASE_URL: "https://training-buddy-2022-default-rtdb.firebaseio.com"
 STORAGE_BUCKET: "training-buddy-2022.appspot.com"
 MSG_SENDER_ID: "445917436"
 APP_ID: "1:445917436:web:a79e84196f2d8e48100f79"
@@ -21,3 +21,4 @@ AUTH_URI: "https://accounts.google.com/o/oauth2/auth"
 TOKEN_URI: "https://oauth2.googleapis.com/token"
 AUTH_PROVIDER__X509_CERT_URL: "https://www.googleapis.com/oauth2/v1/certs"
 CLIENT_X509_CERT_URL: "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-uine6%40training-buddy-2022.iam.gserviceaccount.com"
+GOOGLE_APPLICATION_CREDENTIALS: "apps/api/src/training-buddy-2022-firebase-adminsdk-uine6-59d810bb2a.json"
