--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "firebase-tools": "^10.8.0",
         "global": "^4.4.0",
         "graphql": "^16.5.0",
+        "netlify-cli": "^10.4.0",
         "passport": "^0.5.2",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
