--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "private": true,
     "dependencies": {
         "@agm/core": "^3.0.0-beta.0",
+        "@angular-material-components/datetime-picker": "^7.0.1",
         "@angular-material-extensions/google-maps-autocomplete": "^7.0.1",
         "@angular/animations": "^13.3.6",
         "@angular/cdk": "^13.3.6",
@@ -63,6 +64,7 @@
         "firebase-tools": "^10.8.0",
         "global": "^4.4.0",
         "graphql": "^16.5.0",
+        "ngx-material-timepicker": "^5.5.3",
         "passport": "^0.5.2",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
