--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "test": "nx test",
         "lint": "nx lint",
         "reset": "nx reset",
-        "postinstall": "ngcc --properties es2015 browser module main"
+        "postinstall": "ngcc --properties es2015 browser module main",
+        "host": "yarn start api && yarn build"
     },
     "private": true,
     "dependencies": {
