--- a/.github/workflows/nxtest.yml
+++ b/.github/workflows/nxtest.yml
@@ -67,4 +67,10 @@ jobs:
       - name: E2E test affected
         if: inputs.testtype == 'e2e' && inputs.test == 'affected'
         run: yarn nx affected:e2e --base=${{ env.NX_BASE }} --head=${{ env.NX_HEAD }}
+      
+      - name: Codecov
+        uses: codecov/codecov-action@v3.1.0
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./coverage/
           
