--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -75,6 +75,9 @@
       "@training-buddy/client/profile/feature": [
         "libs/client/profile/feature/src/index.ts"
       ],
+      "@training-buddy/client/profileimageupload": [
+        "libs/client/profileimageupload/src/index.ts"
+      ],
       "@training-buddy/client/scheduleworkout/feature": [
         "libs/client/scheduleworkout/feature/src/index.ts"
       ],
