--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -17,6 +17,7 @@ on:
         - build
         - unit
         - e2e
+        - all
 
 #jobs in the workflow with passed in parameters
 jobs:
@@ -47,3 +48,8 @@ jobs:
     with:
       test: 'affected'
       testtype: 'e2e'
+  test-all:
+    uses: ./.github/workflows/nxtest.yml
+    if: ${{ github.event.inputs.testchoice == 'all'}}
+    with:
+      test: 'all'
