--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "firebase-tools": "^10.8.0",
     "global": "^4.4.0",
     "graphql": "^16.5.0",
-    "ngx-material-timepicker": "^5.5.3",
     "netlify-cli": "^10.4.0",
+    "ngx-cookie-service": "^14.0.0",
+    "ngx-material-timepicker": "^5.5.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
