--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -75,6 +75,9 @@
       "@training-buddy/client/login/feature": [
         "libs/client/login/feature/src/index.ts"
       ],
+      "@training-buddy/client/pagenotfound": [
+        "libs/client/pagenotfound/src/index.ts"
+      ],
       "@training-buddy/client/profileimageupload": [
         "libs/client/profileimageupload/src/index.ts"
       ],
