--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "firebase-tools": "^10.8.0",
     "global": "^4.4.0",
     "graphql": "^16.5.0",
+    "graphql-subscriptions": "^2.0.0",
     "netlify-cli": "^10.4.0",
     "ngx-cookie-service": "^14.0.0",
     "ngx-material-timepicker": "^5.5.3",
