--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -63,6 +63,9 @@
       "@training-buddy/client/athlete-profile/feature": [
         "libs/client/athlete-profile/feature/src/index.ts"
       ],
+      "@training-buddy/client/changepassword/feature": [
+        "libs/client/changepassword/feature/src/index.ts"
+      ],
       "@training-buddy/client/dashboard/feature": [
         "libs/client/dashboard/feature/src/index.ts"
       ],
