--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "global": "^4.4.0",
     "graphql": "^16.5.0",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-upload": "^15.0.2",
     "netlify-cli": "^10.4.0",
     "ngx-cookie-service": "^14.0.0",
     "ngx-material-timepicker": "^5.5.3",
