--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "firebase-admin": "^10.2.0",
     "firebase-functions": "^3.21.0",
     "firebase-tools": "^10.8.0",
+    "fuse.js": "^6.6.2",
     "global": "^4.4.0",
     "graphql": "^16.5.0",
     "graphql-subscriptions": "^2.0.0",
