--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
+    "sorted-btree": "^1.8.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
