--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "nx lint",
     "reset": "nx reset",
     "postinstall": "ngcc --properties es2015 browser module main",
-    "host": "yarn start api && yarn build"
+    "host": "yarn start api && yarn build",
+    "cypress": "yarn nx run client-e2e:e2e" 
   },
   "private": true,
   "dependencies": {
