--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
+    "@angular/fire": "^7.0.4",
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "^13.3.6",
     "@angular/material": "^13.3.6",
@@ -60,7 +61,7 @@
     "collaborative-filter": "^1.0.0-beta.3",
     "express": "^4.18.1",
     "file-system": "^2.2.2",
-    "firebase": "^9.8.2",
+    "firebase": "^9.0.2",
     "firebase-admin": "^10.2.0",
     "firebase-functions": "^3.21.0",
     "firebase-tools": "^10.8.0",
