--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "nx lint",
     "reset": "nx reset",
     "postinstall": "ngcc --properties es2015 browser module main",
-    "host": "yarn start api && yarn build"
+    "host": "yarn start api && yarn build",
+    "cypress:open": "./node_modules/.bin/cypress open"
+    
   },
   "private": true,
   "dependencies": {
