--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.4.0",
+    "rxjs": "^7.5.6",
     "sorted-btree": "^1.8.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
