--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "reset": "nx reset",
     "postinstall": "ngcc --properties es2015 browser module main",
     "host": "yarn start api && yarn build",
-    "cypress:open": "./node_modules/.bin/cypress open"
+    "cypress:open": "./node_modules/.bin/cypress open",
+    "cypress:run": "./node_modules/.bin/cypress run --browser chrome --headless"
     
   },
   "private": true,
