--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -3,7 +3,7 @@ name: CI Tests
 
 on: 
   pull_request:
-    branches: [ develop ] #branches: [ main, develop, release/** ]
+    branches: [ develop, main ] #branches: [ main, develop, release/** ]
   #manual github action trigger with choices to run individual tests
   workflow_dispatch:
     inputs:
