--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -1,100 +1,97 @@
 {
-  "projectType": "application",
-  "root": "apps/client",
-  "sourceRoot": "apps/client/src",
-  "prefix": "training-buddy",
-  "targets": {
-    "build": {
-      "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/apps/client",
-        "index": "apps/client/src/index.html",
-        "main": "apps/client/src/main.ts",
-        "polyfills": "apps/client/src/polyfills.ts",
-        "tsConfig": "apps/client/tsconfig.app.json",
-        "inlineStyleLanguage": "scss",
-        "assets": [
-          "apps/client/src/favicon.ico",
-          "apps/client/src/assets",
-          "apps/client/src/manifest.webmanifest"
-        ],
-        "styles": ["apps/client/src/styles.scss"],
-        "scripts": [],
-        "serviceWorker": true,
-        "ngswConfigPath": "apps/client/ngsw-config.json"
-      },
-      "configurations": {
-        "production": {
-          "budgets": [
-            {
-              "type": "initial",
-              "maximumWarning": "2mb",
-              "maximumError": "5mb"
+    "projectType": "application",
+    "root": "apps/client",
+    "sourceRoot": "apps/client/src",
+    "prefix": "training-buddy",
+    "targets": {
+        "build": {
+            "executor": "@angular-devkit/build-angular:browser",
+            "outputs": ["{options.outputPath}"],
+            "options": {
+                "outputPath": "./libs/training-buddy/dist/apps/client",
+                "index": "apps/client/src/index.html",
+                "main": "apps/client/src/main.ts",
+                "polyfills": "apps/client/src/polyfills.ts",
+                "tsConfig": "apps/client/tsconfig.app.json",
+                "inlineStyleLanguage": "scss",
+                "assets": [
+                    "apps/client/src/favicon.ico",
+                    "apps/client/src/assets",
+                    "apps/client/src/manifest.webmanifest"
+                ],
+                "styles": ["apps/client/src/styles.scss"],
+                "scripts": [],
+                "serviceWorker": true,
+                "ngswConfigPath": "apps/client/ngsw-config.json"
             },
-            {
-              "type": "anyComponentStyle",
-              "maximumWarning": "2kb",
-              "maximumError": "4kb"
-            }
-          ],
-          "fileReplacements": [
-            {
-              "replace": "apps/client/src/environments/environment.ts",
-              "with": "apps/client/src/environments/environment.prod.ts"
-            }
-          ],
-          "outputHashing": "all"
+            "configurations": {
+                "production": {
+                    "budgets": [{
+                            "type": "initial",
+                            "maximumWarning": "2mb",
+                            "maximumError": "5mb"
+                        },
+                        {
+                            "type": "anyComponentStyle",
+                            "maximumWarning": "2kb",
+                            "maximumError": "4kb"
+                        }
+                    ],
+                    "fileReplacements": [{
+                        "replace": "apps/client/src/environments/environment.ts",
+                        "with": "apps/client/src/environments/environment.prod.ts"
+                    }],
+                    "outputHashing": "all"
+                },
+                "development": {
+                    "buildOptimizer": false,
+                    "optimization": false,
+                    "vendorChunk": true,
+                    "extractLicenses": false,
+                    "sourceMap": true,
+                    "namedChunks": true
+                }
+            },
+            "defaultConfiguration": "production"
         },
-        "development": {
-          "buildOptimizer": false,
-          "optimization": false,
-          "vendorChunk": true,
-          "extractLicenses": false,
-          "sourceMap": true,
-          "namedChunks": true
-        }
-      },
-      "defaultConfiguration": "production"
-    },
-    "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
-      "configurations": {
-        "production": {
-          "browserTarget": "client:build:production"
+        "serve": {
+            "executor": "@angular-devkit/build-angular:dev-server",
+            "configurations": {
+                "production": {
+                    "browserTarget": "client:build:production"
+                },
+                "development": {
+                    "browserTarget": "client:build:development"
+                }
+            },
+            "defaultConfiguration": "development",
+            "options": {
+                "proxyConfig": "apps/client/proxy.conf.json"
+            }
         },
-        "development": {
-          "browserTarget": "client:build:development"
+        "extract-i18n": {
+            "executor": "@angular-devkit/build-angular:extract-i18n",
+            "options": {
+                "browserTarget": "client:build"
+            }
+        },
+        "lint": {
+            "executor": "@nrwl/linter:eslint",
+            "options": {
+                "lintFilePatterns": [
+                    "apps/client/src/**/*.ts",
+                    "apps/client/src/**/*.html"
+                ]
+            }
+        },
+        "test": {
+            "executor": "@nrwl/jest:jest",
+            "outputs": ["coverage/apps/client"],
+            "options": {
+                "jestConfig": "apps/client/jest.config.js",
+                "passWithNoTests": true
+            }
         }
-      },
-      "defaultConfiguration": "development",
-      "options": {
-        "proxyConfig": "apps/client/proxy.conf.json"
-      }
     },
-    "extract-i18n": {
-      "executor": "@angular-devkit/build-angular:extract-i18n",
-      "options": {
-        "browserTarget": "client:build"
-      }
-    },
-    "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "options": {
-        "lintFilePatterns": [
-          "apps/client/src/**/*.ts",
-          "apps/client/src/**/*.html"
-        ]
-      }
-    },
-    "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/client"],
-      "options": {
-        "jestConfig": "apps/client/jest.config.js",
-        "passWithNoTests": true
-      }
-    }
-  },
-  "tags": ["type:app"]
+    "tags": ["type:app"]
 }
