--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "host": "yarn start api && yarn build",
         "cypress:open": "./node_modules/.bin/cypress open",
         "cypress:run": "./node_modules/.bin/cypress run --browser chrome --headless"
-
     },
     "private": true,
     "dependencies": {
@@ -66,6 +65,7 @@
         "apollo": "^2.33.11",
         "apollo-angular": "^3.0.1",
         "apollo-server": "^3.7.0",
+        "apollo-server-express": "^3.10.2",
         "bcrypt": "^5.0.1",
         "collaborative-filter": "^1.0.0-beta.3",
         "express": "^4.18.1",
