🐛Skeleton for Email Notification

--- a/.env
+++ b/.env
@@ -22,3 +22,4 @@ TOKEN_URI: "https://oauth2.googleapis.com/token"
 AUTH_PROVIDER__X509_CERT_URL: "https://www.googleapis.com/oauth2/v1/certs"
 CLIENT_X509_CERT_URL: "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-uine6%40training-buddy-2022.iam.gserviceaccount.com"
 GOOGLE_APPLICATION_CREDENTIALS: "apps/api/src/training-buddy-2022-firebase-adminsdk-uine6-59d810bb2a.json"
+SENDGRID_API_KEY:"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" 
