--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "@apollo/client": "^3.6.2",
         "@nestjs/apollo": "^10.0.11",
         "@nestjs/common": "^8.0.0",
-        "@nestjs/config": "^2.0.0",
+        "@nestjs/config": "^2.2.0",
         "@nestjs/core": "^8.0.0",
         "@nestjs/graphql": "^10.0.11",
         "@nestjs/jwt": "^8.0.0",
@@ -57,6 +57,7 @@
         "@ngxs/storage-plugin": "^3.7.3",
         "@ngxs/store": "^3.7.3",
         "@prisma/client": "3.10.0",
+        "@sendgrid/mail": "^7.7.0",
         "@types/firebase": "^3.2.1",
         "@types/googlemaps": "^3.43.3",
         "@types/passport-jwt": "^3.0.6",
