--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "graphql": "^16.5.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^15.0.2",
+    "js-sha256": "^0.9.0",
     "netlify-cli": "^10.4.0",
     "ngx-cookie-service": "^14.0.0",
     "ngx-material-timepicker": "^5.5.3",
