--- a/firebase.json
+++ b/firebase.json
@@ -1,64 +1,59 @@
 {
-    "hosting": {
-        "public": "./libs/training-buddy/dist/apps/client",
-        "ignore": [
-            "firebase.json",
-            "**/.*",
-            "**/node_modules/**"
-        ],
-        "rewrites": [{
-            "source": "**",
-            "destination": "/index.html"
-        }]
-    },
-    "database": {
-        "rules": "database.rules.json"
-    },
-    "firestore": {
-        "rules": "firestore.rules",
-        "indexes": "firestore.indexes.json"
+  "hosting": {
+    "public": "./libs/training-buddy/dist/apps/client",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "functions": {
+    "source": "./libs",
+    "predeploy": []
+  },
+  "storage": {
+    "rules": "storage.rules"
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
     },
     "functions": {
-
-        "source": "./libs",
-
-
-        "predeploy": [
-
-
-        ]
-
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "pubsub": {
+      "port": 8085
     },
     "storage": {
-        "rules": "storage.rules"
+      "port": 9199
     },
-    "emulators": {
-        "auth": {
-            "port": 9099
-        },
-        "functions": {
-            "port": 5001
-        },
-        "firestore": {
-            "port": 8080
-        },
-        "database": {
-            "port": 9000
-        },
-        "hosting": {
-            "port": 5000
-        },
-        "pubsub": {
-            "port": 8085
-        },
-        "storage": {
-            "port": 9199
-        },
-        "ui": {
-            "enabled": true
-        }
-    },
-    "remoteconfig": {
-        "template": "remoteconfig.template.json"
+    "ui": {
+      "enabled": true
     }
+  },
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
+  }
 }
