--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.6",
+    "sib-api-v3-sdk": "^8.4.2",
     "sorted-btree": "^1.8.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
